--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -32,5 +32,7 @@ plugins:
 # Navigation layout
 nav:
   - Home: index.md
-  - ... | glob=faq/*.md
+  - ... | glob=how_to/*.md
+  - ... | glob=troubleshooting/*.md
   - ... | glob=release_notes/*.md
+  - contact/index.md
