--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -16,6 +16,9 @@ theme:
   favicon: assets/favicon.ico
 
 markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - md_in_html
   - mdx_truly_sane_lists
