Add project spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "Derendered",
         "Derendering",
         "displaynames",
+        "flexiprim",
         "gacha",
         "Havok",
         "Hotspot",
@@ -35,6 +36,7 @@
         "SLURL",
         "syswell",
         "teleporting",
+        "texturable",
         "toybox",
         "Unchecking",
         "undocked",
