--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -16,10 +16,12 @@ theme:
   favicon: assets/favicon.ico
 
 markdown_extensions:
+  - abbr
   - admonition
-  - pymdownx.details
-  - pymdownx.superfences
   - attr_list
+  - pymdownx.details
+  - pymdownx.snippets
+  - pymdownx.superfences
   - md_in_html
   - mdx_truly_sane_lists
   
