--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,7 +1,7 @@
 FROM catznip-docs
 
-COPY . .
+COPY /catznip .
 
 RUN git config --global user.name "GitHub CI/CD"
 
-RUN mkdocs gh-deploy --config-file ./catznip/mkdocs.yml --force
+RUN mkdocs gh-deploy --config-file ./mkdocs.yml --force
