--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -20,7 +20,9 @@ markdown_extensions:
   - admonition
   - attr_list
   - pymdownx.details
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      #check_paths: true
+      base_path: ../docs
   - pymdownx.superfences
   - md_in_html
   - mdx_truly_sane_lists
