--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -22,7 +22,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.snippets:
       #check_paths: true
-      base_path: ../docs
+      base_path: ./catznip
   - pymdownx.superfences
   - md_in_html
   - mdx_truly_sane_lists
