--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "relogging",
         "rezzed",
         "rezzing",
+        "rlva",
         "sidepanel",
         "SLURL",
         "syswell",
