--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "adjustheight",
         "Animesh",
         "Bellisseria",
         "Bento",
@@ -9,10 +10,12 @@
         "chiclet",
         "CHUI",
         "Ȼᴏƒƒєα",
+        "dataserver",
         "Derender",
         "Derendered",
         "Derendering",
         "displaynames",
+        "fartouch",
         "flexiprim",
         "gacha",
         "Havok",
@@ -37,8 +40,11 @@
         "SLURL",
         "syswell",
         "teleporting",
+        "terraforming",
         "texturable",
         "toybox",
+        "tplocal",
+        "tpto",
         "Unchecking",
         "undocked",
         "untextured",
