--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,12 @@
         "rezzed",
         "rezzing",
         "rlva",
+        "sendgesture",
+        "showloc",
         "sidepanel",
+        "sittp",
         "SLURL",
+        "startim",
         "syswell",
         "teleporting",
         "terraforming",
