--- a/catznip/mkdocs.yml
+++ b/catznip/mkdocs.yml
@@ -20,6 +20,7 @@ markdown_extensions:
   - admonition
   - attr_list
   - pymdownx.details
+  - pymdownx.keys
   - pymdownx.snippets:
       #check_paths: true
       base_path: ./catznip
