added a load of RLVa commands and stuff .. hmmm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Bellisseria",
         "Bento",
         "camming",
+        "camunlock",
         "CATZ",
         "Catznip",
         "chiclet",
@@ -15,16 +16,23 @@
         "Derendered",
         "Derendering",
         "displaynames",
+        "eyeoffset",
         "fartouch",
         "flexiprim",
+        "focusoffset",
+        "fovmax",
+        "fovmin",
         "gacha",
         "Havok",
         "Hotspot",
+        "instantmessage",
         "Inworld",
         "linkset",
+        "localchat",
         "minidump",
         "Monospace",
         "mouselook",
+        "Nostrip",
         "notecard",
         "notecards",
         "pathfinding",
@@ -33,10 +41,13 @@
         "reimplementation",
         "relog",
         "relogging",
+        "remattach",
         "rezzed",
         "rezzing",
         "rlva",
         "sendgesture",
+        "setcam",
+        "setenv",
         "showloc",
         "sidepanel",
         "sittp",
